# sdk-js/src/types.ts
@@ -96,6 +96,8 @@ export type SaveScriptResponse = Schema<"SaveScriptResponse">;
 export type LabDefinition = Schema<"LabDefinition">;
 export type LabProgress = Schema<"LabProgress">;
 export type LabAttempt = Schema<"LabAttempt">;
+export type LabTeacherFeedback = Schema<"LabTeacherFeedback">;
+export type SaveTeacherFeedbackRequest = Schema<"SaveTeacherFeedbackRequest">;
 export type StudentLearningOverview = Schema<"StudentLearningOverview">;
 export type TeacherLearningOverview = Schema<"TeacherLearningOverview">;
 export type TeacherStudentAttempts = Schema<"TeacherStudentAttempts">;
